--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid container-xxl bd-gutter flex-wrap flex-lg-nowrap">
         <!-- <p class="text-truncate">Wurawut Inter Wittaya School</p> -->
-        <a class="navbar-brand d-lg-none" href="#home"><img class="w-50" src="assets/img/logo_worawut_md.png"
+        <a class="navbar-brand d-lg-none" href="#home"><img class="w-50" src="logo_worawut_md.png"
             alt="home"></a>
         <!--  -->
         <div class="d-lg-none">
@@ -129,7 +129,7 @@
                 <div class="row g-0">
                   <div class="col-4">
                     <div class="ratio ratio-1x1 rounded-circle overflow-hidden">
-                      <img src="assets/img/learning.jpg" alt="">
+                      <img src="learning.jpg" alt="">
                     </div>
                   </div>
                   <div class="d-flex col-8 align-items-center ps-2">
@@ -343,7 +343,7 @@
             style="--bs-scroll-height: 100px;">
             <li class="nav-item">
               <a class="nav-link text-end" aria-current="page" href="#home"><img class="img-fluid" style="width: 15%;"
-                  src="assets/img/logo_worawut_md.png" alt=""><span class="ms-1">โรงเรียนวรวุธอินเตอร์วิทยา</span></>
+                  src="logo_worawut_md.png" alt=""><span class="ms-1">โรงเรียนวรวุธอินเตอร์วิทยา</span></>
               </a>
               <!-- <a class="nav-link" aria-current="page" href="index.php"><i class="bi bi-house-fill"><span
                     class="d-lg-none">Home</span></i></a> -->
@@ -482,7 +482,7 @@
                 <source src="assets/img/
                 " type="video/mp4">
             </video> -->
-      <img class="hero-video" src="assets/img/std.jpg" alt="hero">
+      <img class="hero-video" src="std.jpg" alt="hero">
       <div class="overlay"></div>
       <div class="container z-3">
         <div class="row align-items-center">
@@ -578,7 +578,7 @@ color-mix(in srgb, var(--surface-color), transparent 95%);
               </div>
               <div class="carousel-inner p-2">
                 <div class="carousel-item active event-layout">
-                  <img src="assets/img/std.jpg" class="d-block w-100 rounded-3" alt="...">
+                  <img src="std.jpg" class="d-block w-100 rounded-3" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
@@ -587,7 +587,7 @@ color-mix(in srgb, var(--surface-color), transparent 95%);
                   </div>
                 </div>
                 <div class="carousel-item active event-overlay">
-                  <img src="assets/img/std.jpg" class="d-block w-100 rounded-3" alt="...">
+                  <img src="std.jpg" class="d-block w-100 rounded-3" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
@@ -596,14 +596,14 @@ color-mix(in srgb, var(--surface-color), transparent 95%);
                   </div>
                 </div>
                 <div class="carousel-item event-overlay">
-                  <img src="assets/img/std.jpg" class="d-block w-100 rounded-3" alt="...">
+                  <img src="std.jpg" class="d-block w-100 rounded-3" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p>
                   </div>
                 </div>
                 <div class="carousel-item event-overlay">
-                  <img src="assets/img/std.jpg" class="d-block w-100 rounded-3" alt="...">
+                  <img src="std.jpg" class="d-block w-100 rounded-3" alt="...">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Some representative placeholder content for the third slide.</p>
@@ -628,7 +628,7 @@ color-mix(in srgb, var(--surface-color), transparent 95%);
               <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-xl-2">
                 <a href="#event-image" class="col p-2">
                   <div class="card text-bg-dark">
-                    <img src="assets/img/std.jpg" class="card-img" alt="...">
+                    <img src="std.jpg" class="card-img" alt="...">
                     <div class="card-img-overlay d-flex flex-column justify-content-end bg-black bg-opacity-25"
                       style="background: linear-gradient(to top, rgba(0,0,0,0.7), rgba(255,255,255,0));">
                       <h5 class="card-title">Card title</h5>
@@ -643,7 +643,7 @@ color-mix(in srgb, var(--surface-color), transparent 95%);
                 </a>
                 <a href="#event-image" class="col p-2">
                   <div class="card text-bg-dark">
-                    <img src="assets/img/std.jpg" class="card-img" alt="...">
+                    <img src="std.jpg" class="card-img" alt="...">
                     <div class="card-img-overlay d-flex flex-column justify-content-end bg-black bg-opacity-25"
                       style="background: linear-gradient(to top, rgba(0,0,0,0.75), rgba(255,255,255,0));">
                       <h5 class="card-title">Card title</h5>
@@ -658,7 +658,7 @@ color-mix(in srgb, var(--surface-color), transparent 95%);
                 </a>
                 <a href="#event-image" class="col p-2">
                   <div class="card text-bg-dark">
-                    <img src="assets/img/std.jpg" class="card-img" alt="...">
+                    <img src="std.jpg" class="card-img" alt="...">
                     <div class="card-img-overlay d-flex flex-column justify-content-end bg-black bg-opacity-25"
                       style="background: linear-gradient(to top, rgba(0,0,0,0.75), rgba(255,255,255,0));">
                       <h5 class="card-title">Card title</h5>
@@ -673,7 +673,7 @@ color-mix(in srgb, var(--surface-color), transparent 95%);
                 </a>
                 <a href="#event-image" class="col p-2">
                   <div class="card text-bg-dark">
-                    <img src="assets/img/std.jpg" class="card-img" alt="...">
+                    <img src="std.jpg" class="card-img" alt="...">
                     <div class="card-img-overlay d-flex flex-column justify-content-end bg-black bg-opacity-25"
                       style="background: linear-gradient(to top, rgba(0,0,0,0.75), rgba(0,0,0,0));">
                       <h5 class="card-title">Card title</h5>
@@ -707,12 +707,12 @@ color-mix(in srgb, var(--surface-color), transparent 95%);
               </div>
               <div class="card-body text-center mb-2">
                 <div class="">
-                  <img class="img-fluid" src="assets/img/wireframe.png" alt="">
+                  <img class="img-fluid" src="wireframe.png" alt="">
                 </div>
               </div>
               <div class="card-body text-center mb-2">
                 <div class="">
-                  <img class="img-fluid" src="assets/img/wireframe.png" alt="">
+                  <img class="img-fluid" src="wireframe.png" alt="">
                 </div>
               </div>
             </div>
@@ -725,7 +725,7 @@ color-mix(in srgb, var(--surface-color), transparent 95%);
               <div class="card-body">
                 <div class="col mb-3">
                   <div class="card h-100">
-                    <img class="img-fluid" src="../onlinelesson/iLanding/iLanding/assets/img/avatar-2.webp" alt="">
+                    <img class="img-fluid" src="avatar-2.webp" alt="">
                     <div class="card-body text-center">
                       <h5 class="card-title">ชื่อจริง นามสกุล</h5>
                       <p class="card-text">ผู้อำนวยการ</p>
@@ -734,7 +734,7 @@ color-mix(in srgb, var(--surface-color), transparent 95%);
                 </div>
                 <div class="col mb-3">
                   <div class="card h-100">
-                    <img class="img-fluid" src="../onlinelesson/iLanding/iLanding/assets/img/avatar-2.webp" alt="">
+                    <img class="img-fluid" src="avatar-2.webp" alt="">
                     <div class="card-body text-center">
                       <h5 class="card-title">ชื่อจริง นามสกุล</h5>
                       <p class="card-text">รองผู้อำนวยการ</p>
@@ -743,7 +743,7 @@ color-mix(in srgb, var(--surface-color), transparent 95%);
                 </div>
                 <div class="col mb-3">
                   <div class="card h-100">
-                    <img class="img-fluid" src="../onlinelesson/iLanding/iLanding/assets/img/avatar-2.webp" alt="">
+                    <img class="img-fluid" src="avatar-2.webp" alt="">
                     <div class="card-body text-center">
                       <h5 class="card-title">ชื่อจริง นามสกุล</h5>
                       <p class="card-text">รองผู้อำนวยการ</p>
